--- a/flipbook.html
+++ b/flipbook.html
@@ -1,74 +1,60 @@
-<div class="catalog-app">
-  <div id="viewer">
-    <div id="flipbook" class="ui-flipbook">
-      <!-- Do not place the content here -->
-      <a ignore="1" class="ui-arrow-control ui-arrow-next-page"></a>
-      <a ignore="1" class="ui-arrow-control ui-arrow-previous-page"></a>
-    </div>
-  </div>
-
-  <!-- controls -->
-  <div id="controls">
-    <div class="all">
-        <div class="ui-slider" id="page-slider">
-        <div class="bar">
-          <div class="progress-width">
-            <div class="progress">
-              <div class="handler"></div>
-            </div>
-          </div>
-        </div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      .flipbook-container {
+        width: 800px;
+        height: 600px;
+        margin: 0 auto;
+        position: relative;
+        perspective: 1000px;
+      }
+      .flipbook {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        transform-style: preserve-3d;
+        transition: transform 0.6s;
+      }
+      .page {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+        backface-visibility: hidden;
+      }
+      .flipbook.flipped .page:nth-child(even) {
+        transform: rotateY(180deg);
+      }
+      .flipbook.flipped .page:nth-child(odd) {
+        transform: rotateY(-180deg);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="flipbook-container">
+      <div class="flipbook">
+        <!-- Add your PDF pages as background images here -->
+        <div class="page" style="background-image: url(https://raw.githubusercontent.com/lamweicheng/Flipbook/1583ee77693815ebe40b6bf2292e4709d4ef5b45/Images/16.JPG)"></div>
+        <div class="page" style="background-image: url(https://raw.githubusercontent.com/lamweicheng/Flipbook/1583ee77693815ebe40b6bf2292e4709d4ef5b45/Images/7.JPG)"></div>
       </div>
-
-      <div class="ui-options" id="options">
-        <a class="ui-icon" id="ui-icon-table-contents">
-          <i class="fa fa-bars"></i>
-        </a>
-        <a class="ui-icon show-hint" title="Miniatures" id="ui-icon-miniature">
-          <i class="fa fa-th"></i>
-        </a>
-        <a class="ui-icon" id="ui-icon-zoom">
-          <i class="fa fa-file-o"></i>
-        </a>
-        <a class="ui-icon show-hint" title="Share" id="ui-icon-share">
-          <i class="fa fa-share"></i>
-        </a>
-        <a class="ui-icon show-hint" title="Full Screen" id="ui-icon-full-screen">
-          <i class="fa fa-expand"></i>
-        </a>
-        <a class="ui-icon show-hint" id="ui-icon-toggle">
-          <i class="fa fa-ellipsis-v"></i>
-        </a>
-      </div>
-
-      <!-- zoom slider -->
-      <div id="zoom-slider-view" class="zoom-slider">
-          <div class="bg">
-             <div class="ui-slider" id="zoom-slider">
-              <div class="bar">
-                <div class="progress-width">
-                  <div class="progress">
-                    <div class="handler"></div>
-                  </div>
-                </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- / zoom slider -->
     </div>
-    
-    <div id="ui-icon-expand-options">
-      <a class="ui-icon show-hint">
-        <i class="fa fa-ellipsis-h"></i>
-      </a>
-    </div>
+    <script>
+      var flipbook = document.querySelector(".flipbook");
 
-  </div>
-  <!-- / controls -->
+// Function to flip the pages
+    function flipPages() {
+      var pages = flipbook.querySelectorAll(".page");
+      for (var i = 0; i < pages.length; i++) {
+        pages[i].classList.toggle("left");
+        pages[i].classList.toggle("right");
+      }
+    }
 
-  <!-- miniatures -->
-  <div id="miniatures" class="ui-miniatures-slider">
-
-  </div>
-  <!-- / miniatures -->
+    // Add event listener to trigger the flip animation
+    flipbook.addEventListener("click", flipPages);
+    </script>
+   </body>
+  </html>
